@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST thinking-sphinx-1.3.14.gem 139776 RMD160 6a34e9d28b7371b5e18778a6c506cd24485e2538 SHA1 f672e532cae22422f194a5f27629585665353168 SHA256 7ab2c4d0647f2600a27a73c0e24c02f44c1c62defd18abe36e6bd7371d4e0410
+DIST thinking-sphinx-1.3.16.gem 140288 RMD160 c58839df7d73b1cf8146d8aa60e1f8fcd714a90c SHA1 cf9eed94bdf0895ffb998b47b3f6acc4526026c7 SHA256 bb2b50d0257f7d91a309b200671e2449320c924f204c32f6097eb450cb1a7028
 EBUILD thinking-sphinx-1.3.14.ebuild 632 RMD160 319b332f08fbf21c2424d41b0926558d11147e20 SHA1 f0e9c62bce76f632e7306f713c975c21c52302fa SHA256 6242666802375db0b28d7aafd44751406b66dca96eb887e5bf78d9bee97e4f62
-MISC ChangeLog 830 RMD160 8fe1abee0587bf4038aad46053a7a1ad0776909f SHA1 6d08d7ff9345939a9cffb40d682d16bc8dff7ad7 SHA256 bba9d70abe945c6ac6d5791bef917ff79bb9919f3111e83d6fc399247b50ec99
+EBUILD thinking-sphinx-1.3.16.ebuild 804 RMD160 82d7aa7d66c9547561b54083a3921871c5dd9a2b SHA1 5458e0535740ce56369bf74442cfe6bee5f131e1 SHA256 b95b181c7e8fb8860ce5767de81452f62a21368cfc39484b20cbf257960116da
+MISC ChangeLog 970 RMD160 ca9f363228c38e0720bc2a40d73a8480a3f91f32 SHA1 a9835781094f3fe16b4ce48285a9b384781da8b9 SHA256 68d5e98822399f31dde7285a55b03bf79436d9824a977c59da39ab0460263cc4
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktz1T8ACgkQeM7EJeUH71PlbACfY3WqqILS8h+/jmAPHlNV2iJ7
-KVEAn0z4bJbFzPkivSqpLayxYg0XlOSD
-=G0hO
+iEYEARECAAYFAkuOgOEACgkQeM7EJeUH71O1KwCcDeWY4fvoPAeoYoo+0nmCBgzX
+TGMAoICusAWos9kII06fndj26Aybf1cU
+=4JK2
 -----END PGP SIGNATURE-----
