@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*thinking-sphinx-1.3.16 (03 Mar 2010)
+
+  03 Mar 2010; Hans de Graaff <graaff@gentoo.org>
+  +thinking-sphinx-1.3.16.ebuild:
+  Version bump.
+
   11 Feb 2010; Hans de Graaff <graaff@gentoo.org>
   -thinking-sphinx-1.3.8.ebuild, -thinking-sphinx-1.3.13.ebuild:
   Remove old versions.
